# amplify-derive

./: .rustfmt.toml  Cargo.toml  MANIFEST.yml  README.md
.github/workflows/: build.yml  test.yml
src/: display.rs  from.rs  getters.rs  lib.rs  wrapper.rs
syn/: Cargo.toml
syn/src/: attr.rs  cls.rs  data.rs  error.rs  lib.rs  parsers.rs  req.rs  val.rs
test/wasm/: Cargo.toml
