[package]
name = "amplify_syn"
version = "1.2.0"
description = "Amplifying syn capabilities: helper functions for creating proc macro libraries"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
keywords = ["generics", "derive", "wrap", "patterns"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns"]
repository = "https://github.com/rust-amplify/amplify-derive"
homepage = "https://github.com/rust-amplify"
rust-version = "1.60.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
syn = "1"
proc-macro2 = "1"
quote = "1"
